[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7"
ic-cdk = "0.5"
ic-ledger-types = "0.1"
ic-cdk-macros = "0.5"
serde = "1.0"
# ic-event-hub = "0.3"
# ic-event-hub-macros = "0.3"
ic-cron = "0.7"

serde_bytes = "0.11"
json_pretty = "0.1.2"
anyhow = "1.0.56"
thiserror = "1.0"
email_address = "0"

[dev-dependencies]
rstest = "0.12.0"